--- a/index.html
+++ b/index.html
@@ -5,28 +5,42 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <title>Discord</title>
 </head>
 <body>
 
     <header>
-        <nav>
-            <div class="logo">
-                <img src="img/logo.svg" alt="">
+        <div class="container">
+            <nav>
+                <div class="logo">
+                    <img src="img/logo.svg" alt="">
+                </div>
+                <div class="link">
+                    <a href="https://discord.com">Scarica</a>
+                    <a href="https://discord.com">Perchè Discord</a>
+                    <a href="https://discord.com">Nitro</a>
+                    <a href="https://discord.com">Sicurezza</a>
+                    <a href="https://discord.com">Assistenza</a>
+                </div>
+                <div class="accedi">
+                    <a href="https://discord.com">Accedi</a>
+                </div>
+            </nav>
+            <div class="jumbotron">
+                <div class="container">
+                    <h1>Il tuo posto per parlare</h1>
+                    <p>Che tu faccia parte di un club scolastico, un gruppo di gamer, una community artistica mondiale o dove trascorrere tempo assieme a un piccolo gruppo di amici: uno spazio in cui è più facile chiacchierare ogni giorno e ritrovarsi più spesso.</p>
+                    <div class="buttons">
+                        <a href="https://discord.com">Scarica per Mac</a>
+                        <a href="https://discord.com">Apri Discord nel tuo browser</a>
+                    </div>
+                </div>
             </div>
-            <div class="link">
-                <a href="www.google.com">Scarica</a>
-                <a href="www.google.com">Perchè Discord</a>
-                <a href="www.google.com">Nitro</a>
-                <a href="www.google.com">Sicurezza</a>
-                <a href="www.google.com">Assistenza</a>
-            </div>
-            <div class="accedi"></div>
-        </nav>
+        </div>
     </header>
 
     <main>
-        
+
     </main>
     
 </body>
