--- a/index.html
+++ b/index.html
@@ -41,6 +41,42 @@
 
     <main>
 
+        <section class="fisrt">
+            <div class="container">
+                <div class="image">
+                    <img src="img/item1.svg" alt="">
+                </div>
+                <div class="text">
+                    <h1>Un luogo a invito con tutto lo spazio necessario per parlare</h1>
+                    <p>I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o somplicemente parlare della tua giornata senza intasare uma chat di gruppo.</p>
+                </div>
+            </div>
+        </section>
+
+        <section class="second">
+            <div class="container">
+                <div class="image">
+                    <img src="img/item2.svg" alt="">
+                </div>
+                <div class="text">
+                    <h1>Dove trovarsi è facile</h1>
+                    <p>Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo server possono vedere che sei lì e unirsi istantaneamente senza dover chiamare.</p>
+                </div>
+            </div>
+        </section>
+
+        <section class="third">
+            <div class="container">
+                <div class="image">
+                    <img src="img/item3.svg" alt="">
+                </div>
+                <div class="text">
+                    <h1>Da pochi a un fandom</h1>
+                    <p>Da inizio ad una community di qualsiasi dimensione con strumenti di moderazione e accesso ai membri personalizzabile. Concedi ai membri poteri speciali, crea canali privati, e molto altro.</p>
+                </div>
+            </div>
+        </section>
+
     </main>
     
 </body>
