--- a/index.html
+++ b/index.html
@@ -91,6 +91,67 @@
         </section>
 
     </main>
+
+    <footer>
+        <div class="container">
+            <div class="top-footer">
+                <div class="social">
+                    <h2>Il tuo posto per parlare</h2>
+                    <img src="img/ita.png" alt="ita"><span>Italiano</span>
+                    <p>Icon</p>
+                </div>
+                <div class="footer-menu">
+                    <div class="list">
+                        <h3>Prodotto</h3>
+                        <a href="https://discord.com">Scarica</a>
+                        <a href="https://discord.com">Perchè Discord</a>
+                        <a href="https://discord.com">Nitro</a>
+                        <a href="https://discord.com">Sicurezza</a>
+                        <a href="https://discord.com">Assistenza</a>
+                    </div>
+                    <div class="list">
+                        <h3>Compagnia</h3>
+                        <a href="https://discord.com">Chi siamo</a>
+                        <a href="https://discord.com">Lavora con noi</a>
+                        <a href="https://discord.com">Redazione</a>
+                        <a href="https://discord.com">Marchio</a>
+                        <a href="https://discord.com">Negozio</a>
+                    </div>
+                    <div class="list">
+                        <h3>Risorse</h3>
+                        <a href="https://discord.com">Scarica</a>
+                        <a href="https://discord.com">Perchè Discord</a>
+                        <a href="https://discord.com">Nitro</a>
+                        <a href="https://discord.com">Sicurezza</a>
+                        <a href="https://discord.com">Assistenza</a><a href="https://discord.com">Scarica</a>
+                        <a href="https://discord.com">Perchè Discord</a>
+                        <a href="https://discord.com">Nitro</a>
+                        <a href="https://discord.com">Sicurezza</a>
+                        <a href="https://discord.com">Assistenza</a>
+                        <a href="https://discord.com">Assistenza</a>
+                    </div>
+                    <div class="list">
+                        <h3>Norme</h3>
+                        <a href="https://discord.com">Scarica</a>
+                        <a href="https://discord.com">Perchè Discord</a>
+                        <a href="https://discord.com">Nitro</a>
+                        <a href="https://discord.com">Sicurezza</a>
+                        <a href="https://discord.com">Assistenza</a>
+                        <a href="https://discord.com">Assistenza</a>
+                    </div>
+                </div>
+            </div>
+            <hr>
+            <div class="bottom-footer">
+                <div class="logo">
+                    <img src="img/logo.svg" alt="">
+                </div>
+                <div class="registrati">
+                    <a href="https://discord.com">Registrati</a>
+                </div>
+            </div>
+        </div>
+    </footer>
     
 </body>
 </html>
