--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Discord</title>
 </head>
 <body>
@@ -31,7 +32,7 @@
                     <h1>Il tuo posto per parlare</h1>
                     <p>Che tu faccia parte di un club scolastico, un gruppo di gamer, una community artistica mondiale o dove trascorrere tempo assieme a un piccolo gruppo di amici: uno spazio in cui è più facile chiacchierare ogni giorno e ritrovarsi più spesso.</p>
                     <div class="buttons">
-                        <a href="https://discord.com">Scarica per Mac</a>
+                        <a href="https://discord.com"><i class="fa-solid fa-arrow-down-long"></i> Scarica per Mac</a>
                         <a href="https://discord.com">Apri Discord nel tuo browser</a>
                     </div>
                 </div>
@@ -85,7 +86,7 @@
                 <img src="img/item4-big.svg" alt="">
                 <h2>Pronto a iniziare la tua avventura?</h2>
                 <div class="button">
-                    <a href="https://discord.com">Scarica per Mac</a>
+                    <a href="https://discord.com"><i class="fa-solid fa-arrow-down-long"></i> Scarica per Mac</a>
                 </div>
             </div>
         </section>
@@ -97,8 +98,8 @@
             <div class="top-footer">
                 <div class="social">
                     <h2>Il tuo posto per parlare</h2>
-                    <img src="img/ita.png" alt="ita"><span>Italiano</span>
-                    <p>Icon</p>
+                    <img src="img/ita.png" alt="ita"><span>Italiano <i class="fa-solid fa-angle-down"></i></span>
+                    <p><i class="fa-brands fa-twitter"></i><i class="fa-brands fa-instagram"></i><i class="fa-brands fa-facebook"></i><i class="fa-brands fa-youtube"></i></p>
                 </div>
                 <div class="footer-menu">
                     <div class="list">
