--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
 </head>
 <body>
 
+    <!-- header -->
     <header>
         <div class="container">
+
+            <!-- barra di navigazione -->
             <nav>
                 <div class="logo">
                     <img src="img/logo.svg" alt="">
@@ -27,12 +30,14 @@
                     <a href="https://discord.com">Accedi</a>
                 </div>
             </nav>
+
+            <!-- jumbotron -->
             <div class="jumbotron">
                 <div class="container">
                     <h1>Il tuo posto per parlare</h1>
                     <p>Che tu faccia parte di un club scolastico, un gruppo di gamer, una community artistica mondiale o dove trascorrere tempo assieme a un piccolo gruppo di amici: uno spazio in cui è più facile chiacchierare ogni giorno e ritrovarsi più spesso.</p>
                     <div class="buttons">
-                        <a href="https://discord.com"><i class="fa-solid fa-arrow-down-long"></i> Scarica per Mac</a>
+                        <a id="download" href="https://discord.com"><i class="fa-solid fa-arrow-down-long"></i> Scarica per Mac</a>
                         <a href="https://discord.com">Apri Discord nel tuo browser</a>
                     </div>
                 </div>
@@ -40,9 +45,12 @@
         </div>
     </header>
 
+
+    <!-- sezioni principali -->
     <main>
 
-        <section class="fisrt">
+        <!-- prima sezione -->
+        <section class="fisrt pattern">
             <div class="container">
                 <div class="image">
                     <img src="img/item1.svg" alt="">
@@ -52,8 +60,10 @@
                     <p>I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o somplicemente parlare della tua giornata senza intasare uma chat di gruppo.</p>
                 </div>
             </div>
+            <svg id="wave" style="transform:rotate(0deg); transition: 0.3s" viewBox="0 0 1440 160" version="1.1" xmlns="http://www.w3.org/2000/svg"><defs><linearGradient id="sw-gradient-0" x1="0" x2="0" y1="1" y2="0"><stop stop-color="rgba(244, 244, 244, 1)" offset="0%"></stop><stop stop-color="rgba(244, 244, 244, 1)" offset="100%"></stop></linearGradient></defs><path style="transform:translate(0, 0px); opacity:1" fill="url(#sw-gradient-0)" d="M0,48L40,48C80,48,160,48,240,61.3C320,75,400,101,480,114.7C560,128,640,128,720,120C800,112,880,96,960,98.7C1040,101,1120,123,1200,125.3C1280,128,1360,112,1440,93.3C1520,75,1600,53,1680,45.3C1760,37,1840,43,1920,53.3C2000,64,2080,80,2160,80C2240,80,2320,64,2400,61.3C2480,59,2560,69,2640,77.3C2720,85,2800,91,2880,88C2960,85,3040,75,3120,80C3200,85,3280,107,3360,96C3440,85,3520,43,3600,32C3680,21,3760,43,3840,48C3920,53,4000,43,4080,45.3C4160,48,4240,64,4320,82.7C4400,101,4480,123,4560,112C4640,101,4720,59,4800,34.7C4880,11,4960,5,5040,16C5120,27,5200,53,5280,66.7C5360,80,5440,80,5520,77.3C5600,75,5680,69,5720,66.7L5760,64L5760,160L5720,160C5680,160,5600,160,5520,160C5440,160,5360,160,5280,160C5200,160,5120,160,5040,160C4960,160,4880,160,4800,160C4720,160,4640,160,4560,160C4480,160,4400,160,4320,160C4240,160,4160,160,4080,160C4000,160,3920,160,3840,160C3760,160,3680,160,3600,160C3520,160,3440,160,3360,160C3280,160,3200,160,3120,160C3040,160,2960,160,2880,160C2800,160,2720,160,2640,160C2560,160,2480,160,2400,160C2320,160,2240,160,2160,160C2080,160,2000,160,1920,160C1840,160,1760,160,1680,160C1600,160,1520,160,1440,160C1360,160,1280,160,1200,160C1120,160,1040,160,960,160C880,160,800,160,720,160C640,160,560,160,480,160C400,160,320,160,240,160C160,160,80,160,40,160L0,160Z"></path></svg>
         </section>
 
+        <!-- seconda sezione -->
         <section class="second">
             <div class="container">
                 <div class="image">
@@ -66,7 +76,9 @@
             </div>
         </section>
 
+        <!-- terza sezione -->
         <section class="third">
+            <svg id="wave" style="transform:rotate(180deg); transition: 0.3s" viewBox="0 0 1440 160" version="1.1" xmlns="http://www.w3.org/2000/svg"><defs><linearGradient id="sw-gradient-0" x1="0" x2="0" y1="1" y2="0"><stop stop-color="rgba(244, 244, 244, 1)" offset="0%"></stop><stop stop-color="rgba(244, 244, 244, 1)" offset="100%"></stop></linearGradient></defs><path style="transform:translate(0, 0px); opacity:1" fill="url(#sw-gradient-0)" d="M0,48L40,48C80,48,160,48,240,61.3C320,75,400,101,480,114.7C560,128,640,128,720,120C800,112,880,96,960,98.7C1040,101,1120,123,1200,125.3C1280,128,1360,112,1440,93.3C1520,75,1600,53,1680,45.3C1760,37,1840,43,1920,53.3C2000,64,2080,80,2160,80C2240,80,2320,64,2400,61.3C2480,59,2560,69,2640,77.3C2720,85,2800,91,2880,88C2960,85,3040,75,3120,80C3200,85,3280,107,3360,96C3440,85,3520,43,3600,32C3680,21,3760,43,3840,48C3920,53,4000,43,4080,45.3C4160,48,4240,64,4320,82.7C4400,101,4480,123,4560,112C4640,101,4720,59,4800,34.7C4880,11,4960,5,5040,16C5120,27,5200,53,5280,66.7C5360,80,5440,80,5520,77.3C5600,75,5680,69,5720,66.7L5760,64L5760,160L5720,160C5680,160,5600,160,5520,160C5440,160,5360,160,5280,160C5200,160,5120,160,5040,160C4960,160,4880,160,4800,160C4720,160,4640,160,4560,160C4480,160,4400,160,4320,160C4240,160,4160,160,4080,160C4000,160,3920,160,3840,160C3760,160,3680,160,3600,160C3520,160,3440,160,3360,160C3280,160,3200,160,3120,160C3040,160,2960,160,2880,160C2800,160,2720,160,2640,160C2560,160,2480,160,2400,160C2320,160,2240,160,2160,160C2080,160,2000,160,1920,160C1840,160,1760,160,1680,160C1600,160,1520,160,1440,160C1360,160,1280,160,1200,160C1120,160,1040,160,960,160C880,160,800,160,720,160C640,160,560,160,480,160C400,160,320,160,240,160C160,160,80,160,40,160L0,160Z"></path></svg>
             <div class="container">
                 <div class="image">
                     <img src="img/item3.svg" alt="">
@@ -76,10 +88,11 @@
                     <p>Da inizio ad una community di qualsiasi dimensione con strumenti di moderazione e accesso ai membri personalizzabile. Concedi ai membri poteri speciali, crea canali privati, e molto altro.</p>
                 </div>
             </div>
+            <svg id="wave" style="transform:rotate(0deg); transition: 0.3s" viewBox="0 0 1440 160" version="1.1" xmlns="http://www.w3.org/2000/svg"><defs><linearGradient id="sw-gradient-0" x1="0" x2="0" y1="1" y2="0"><stop stop-color="rgba(244, 244, 244, 1)" offset="0%"></stop><stop stop-color="rgba(244, 244, 244, 1)" offset="100%"></stop></linearGradient></defs><path style="transform:translate(0, 0px); opacity:1" fill="url(#sw-gradient-0)" d="M0,48L40,48C80,48,160,48,240,61.3C320,75,400,101,480,114.7C560,128,640,128,720,120C800,112,880,96,960,98.7C1040,101,1120,123,1200,125.3C1280,128,1360,112,1440,93.3C1520,75,1600,53,1680,45.3C1760,37,1840,43,1920,53.3C2000,64,2080,80,2160,80C2240,80,2320,64,2400,61.3C2480,59,2560,69,2640,77.3C2720,85,2800,91,2880,88C2960,85,3040,75,3120,80C3200,85,3280,107,3360,96C3440,85,3520,43,3600,32C3680,21,3760,43,3840,48C3920,53,4000,43,4080,45.3C4160,48,4240,64,4320,82.7C4400,101,4480,123,4560,112C4640,101,4720,59,4800,34.7C4880,11,4960,5,5040,16C5120,27,5200,53,5280,66.7C5360,80,5440,80,5520,77.3C5600,75,5680,69,5720,66.7L5760,64L5760,160L5720,160C5680,160,5600,160,5520,160C5440,160,5360,160,5280,160C5200,160,5120,160,5040,160C4960,160,4880,160,4800,160C4720,160,4640,160,4560,160C4480,160,4400,160,4320,160C4240,160,4160,160,4080,160C4000,160,3920,160,3840,160C3760,160,3680,160,3600,160C3520,160,3440,160,3360,160C3280,160,3200,160,3120,160C3040,160,2960,160,2880,160C2800,160,2720,160,2640,160C2560,160,2480,160,2400,160C2320,160,2240,160,2160,160C2080,160,2000,160,1920,160C1840,160,1760,160,1680,160C1600,160,1520,160,1440,160C1360,160,1280,160,1200,160C1120,160,1040,160,960,160C880,160,800,160,720,160C640,160,560,160,480,160C400,160,320,160,240,160C160,160,80,160,40,160L0,160Z"></path></svg>
         </section>
 
+        <!-- quarta sezione -->
         <section class="fourth">
-
             <div class="container">
                 <h1>Tecnologia affidabile per tenersi in contatto</h1>
                 <p>Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.</p>
@@ -93,8 +106,12 @@
 
     </main>
 
+
+    <!-- footer -->
     <footer>
         <div class="container">
+
+            <!-- footer top -->
             <div class="top-footer">
                 <div class="social">
                     <h2>Il tuo posto per parlare</h2>
@@ -143,6 +160,8 @@
                 </div>
             </div>
             <hr>
+
+            <!-- footer bottom -->
             <div class="bottom-footer">
                 <div class="logo">
                     <img src="img/logo.svg" alt="">
@@ -153,6 +172,7 @@
             </div>
         </div>
     </footer>
+
     
 </body>
 </html>
