--- a/index.html
+++ b/index.html
@@ -97,9 +97,11 @@
                 <h1>Tecnologia affidabile per tenersi in contatto</h1>
                 <p>Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.</p>
                 <img src="img/item4-big.svg" alt="">
-                <h2>Pronto a iniziare la tua avventura?</h2>
+                <div class="stars">
+                    <h2>Pronto a iniziare la tua avventura?</h2>
+                </div>
                 <div class="button">
-                    <a href="https://discord.com"><i class="fa-solid fa-arrow-down-long"></i> Scarica per Mac</a>
+                    <a href="https://discord.com"><i class="fa-solid fa-arrow-down-long"></i>  Scarica per Mac</a>
                 </div>
             </div>
         </section>
