--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 <div class="social">
                     <h2>Il tuo posto per parlare</h2>
                     <img src="img/ita.png" alt="ita"><span>Italiano <i class="fa-solid fa-angle-down"></i></span>
-                    <p><i class="fa-brands fa-twitter"></i><i class="fa-brands fa-instagram"></i><i class="fa-brands fa-facebook"></i><i class="fa-brands fa-youtube"></i></p>
+                    <p><a href="https://twitter.com/"><i class="fa-brands fa-twitter"></i></a><a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a><a href="https://it-it.facebook.com/"><i class="fa-brands fa-facebook"></i></a><a href="https://www.youtube.com/"><i class="fa-brands fa-youtube"></i></a></p>
                 </div>
                 <div class="footer-menu">
                     <div class="list">
